# webspellchecker-proofread-api-jsclient

./: .gitignore  AboutWebApi.md  CMakeLists.txt  Gruntfile.js  README.md  full_copyrights.txt  index.js  jsdoc.json  namespace.js  npm-shrinkwrap.json  package-lock.json  package.json  source_files.json  webapi.js
dependencies/instancebased/: connection.js  textprocessor.js
dependencies/static/: io.js  logger.js  optionsmanager.js  optionsprocessor.js  regexpmanager.js
dependencies/static/utils/: arrayutils.js  browser.js  polyfills.js  regularssources.js  stringutils.js  typechecker.js
tests/: optionsmanager-spec.js  optionsprocessor-spec.js  regexpmanager-spec.js  textprocessor-spec.js  webapi-spec.js
